# ConstellationGame

./: README.md
js_frontend/src/: next.config.mjs  package.json
js_frontend/src/app/: globals.css  layout.jsx  page.jsx
js_frontend/src/app/game/: page.jsx
js_frontend/src/app/login/: page.jsx
js_frontend/src/app/profile/: page.jsx
js_frontend/src/app/register/: page.jsx
js_frontend/src/app/result/: page.jsx
js_frontend/src/app/rules/: page.jsx
js_frontend/src/scripts/: generate-constellations-data.cjs
python_ml/resources/: graph.py
python_ml/src/: config.py  main.py  model_service.py
python_ml/test/: test_model_service.py
services/cpp_core/: CMakeLists.txt
services/cpp_core/data/: constellations_graph.json
services/cpp_core/src/: main.cpp
services/cpp_core/src/engine/: game_engine.cpp  game_engine.hpp
services/cpp_core/src/frontend/: frontend_adapter.cpp  frontend_adapter.hpp
services/cpp_core/src/graph/: constellation_graph.cpp  constellation_graph.hpp
services/cpp_core/src/model/: model_stub.cpp  model_stub.hpp
services/cpp_core/src/state/: game_state.hpp
services/src/: constellation_boundaries.txt  path_builder.py
